--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.82.0",
     "@react-three/fiber": "^8.14.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^10.16.4",
     "maath": "^0.7.0",
     "prop-types": "^15.8.1",
